# Document  $Id$
# Summary   File changelog for the chemical-mime-data project.

2011-02-11 Daniel Leidert <daniel.leidert@wgdd.de>

	* TODO: Minor update.

2010-01-30 Daniel Leidert <daniel.leidert@wgdd.de>

	* xsl/cmd_website.xsl (html.content): Added lang and xml:lang
	attributes to <html>.
	(html.content.table.mime.head, html.content.table.mime.supported)
	(html.content.table.mime.unsupported): Some usability improvements.

2010-01-30 Daniel Leidert <daniel.leidert@wgdd.de>

	* src/Makefile.am (XMLLINT_FLAGS): Added --noent switch to resolve
	entities.
	* src/chemical-mime-database.xml.in (chemical/x-jcamp-dx): Added
	specification URL.

2010-01-30 Daniel Leidert <daniel.leidert@wgdd.de>

	* html_docs/index.html: Added lang and xml:lang attributes. Moved image
	styling to CSS.
	* html_docs/cmd.css (p span.sfnet img): Image shouldn't have border.

2008-12-20 Daniel Leidert <daniel.leidert@wgdd.de>

	* configure.ac (AC_INIT): Increase version to 0.3.0.

2008-12-12 Daniel Leidert <daniel.leidert@wgdd.de>

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): Set CONFIG_SITE.

2008-10-05 Daniel Leidert <daniel.leidert@wgdd.de>

	* README: Updated copyright. s/CVS/SVN/g. Image tools are not
	necessary atm.

	* configure.ac: Removed all icon/theme relevant stuff, including
	variables and options. This is not necessary as long as we don't have
	nice icons.

	* Makefile.am (SUBDIRS): Removed the deleted icons directory.

	* icons/*: Removed. Concentrate on the content atm.

2008-03-02 Daniel Leidert <daniel.leidert@wgdd.de>

	* xsl/cmd_website.xsl (xsl:stylesheet): Added namespace for XHTML
	elements.
	(xsl:output): Fixed method.

2008-02-16 Daniel Leidert <daniel.leidert@wgdd.de>

	* ChangeLog (2008-02-16): Fixed a typo in yesterdays commit message.

2008-02-16 Daniel Leidert <daniel.leidert@wgdd.de>

	* src/chemical-mime-database.xml.in (chemical/x-daylight-smiles): New
	conflict discovered with application/x-smai.

2008-02-16 Daniel Leidert <daniel.leidert@wgdd.de>
