@@ -14,116 +14,108 @@
 
 <!DOCTYPE mime-info [
 
-  <!-- * Root database element.                                            -->
   <!ELEMENT mime-info (mime-type+)>
-  <!ATTLIST mime-info xmlns CDATA #FIXED "http://www.freedesktop.org/standards/shared-mime-info"
-                      xmlns:cm CDATA #FIXED "http://chemical-mime.sourceforge.net/chemical-mime"
-                      cm:vcsid CDATA #IMPLIED>
+  <!ATTLIST mime-info xmlns CDATA #FIXED "http://www.freedesktop.org/standards/shared-mime-info">
+  <!ATTLIST mime-info xmlns:cm CDATA #FIXED "http://chemical-mime.sourceforge.net/chemical-mime">
+  <!ATTLIST mime-info cm:vcsid CDATA #IMPLIED>
 
-    <!-- * The MIME type (only chemical/*).                                -->
-    <!ELEMENT mime-type (comment+, (acronym, expanded-acronym)*, glob+, root-XML*, sub-class-of*, alias*, magic?, cm:icon?, cm:supported-by?, cm:specification*)>
-    <!ATTLIST mime-type type CDATA #REQUIRED
-                        cm:support (yes|no) "no"
-                        cm:added CDATA #IMPLIED>
+  <!ELEMENT mime-type (comment+, (acronym,expanded-acronym)* , (generic-icon? | glob | magic | treemagic | root-XML | alias | sub-class-of)* , cm:icon?, cm:supported-by?, cm:specification*)>
+  <!ATTLIST mime-type type CDATA #REQUIRED>
+  <!ATTLIST mime-type cm:support (yes|no) "no">
+  <!ATTLIST mime-type cm:added CDATA #IMPLIED>
 
-    <!-- * Comment describing a document with the respective MIME type.    -->
-    <!ELEMENT comment (#PCDATA)>
-    <!ATTLIST comment xml:lang CDATA #IMPLIED>
+  <!-- a comment describing a document with the respective MIME type. Example: "WMV video" -->
+  <!ELEMENT comment (#PCDATA)>
+  <!ATTLIST comment xml:lang CDATA #IMPLIED>
 
-    <!-- * Comment describing the respective unexpanded MIME type acronym. -->
-    <!ELEMENT acronym (#PCDATA)>
-    <!ATTLIST acronym xml:lang CDATA #IMPLIED>
+  <!-- a comment describing the respective unexpanded MIME type acronym. Example: "WMV" -->
+  <!ELEMENT acronym (#PCDATA)>
+  <!ATTLIST acronym xml:lang CDATA #IMPLIED>
 
-    <!-- * Comment describing the respective expanded MIME type acronym.   -->
-    <!ELEMENT expanded-acronym (#PCDATA)>
-    <!ATTLIST expanded-acronym xml:lang CDATA #IMPLIED>
+  <!-- a comment describing the respective expanded MIME type acronym. Example: "Windows Media Video" -->
+  <!ELEMENT expanded-acronym (#PCDATA)>
+  <!ATTLIST expanded-acronym xml:lang CDATA #IMPLIED>
 
-    <!-- * File pattern of the MIME type.                                  -->
-    <!ELEMENT glob (cm:conflicts)*>
-    <!ATTLIST glob pattern CDATA #REQUIRED>
+  <!-- a generic icon name as per the Icon Naming Specification, only required if computing
+  it from the mime-type would not work, See "generic-icon" in the Shared Mime Specification -->
+  <!ELEMENT generic-icon (#PCDATA)>
+  <!ATTLIST generic-icon name (application-x-executable|audio-x-generic|font-x-generic|image-x-generic|package-x-generic|text-html|text-x-generic|text-x-generic-template|text-x-script|video-x-generic|x-office-address-book|x-office-calendar|x-office-document|x-office-presentation|x-office-spreadsheet) #IMPLIED>
 
-      <!-- * Conflicting MIME-type(s). Use the @gnome and/or @kde          -->
-      <!-- * attributes to determine if we will have problems with         -->
-      <!-- * KDE 3.x, GNOME <= 2.4 or both.                                -->
-      <!ELEMENT cm:conflicts EMPTY>
-      <!ATTLIST cm:conflicts type CDATA #REQUIRED
-                             cmd (yes|no) "no"
-                             fdo (yes|no) "no"
-                             gnome (yes|no) "no"
-                             kde (yes|no) "no"
-                             mimetypes (yes|no) "no">
+  <!ELEMENT glob (cm:conflicts)*>
+  <!ATTLIST glob pattern CDATA #REQUIRED>
+  <!ATTLIST glob weight CDATA #IMPLIED>
+  <!ATTLIST glob case-sensitive CDATA #IMPLIED>
 
-    <!-- * The root XML element and the namespace.                         -->
-    <!ELEMENT root-XML EMPTY>
-    <!ATTLIST root-XML namespaceURI CDATA #REQUIRED
-                       localName CDATA #REQUIRED>
+  <!ELEMENT magic (match)+>
+  <!ATTLIST magic priority CDATA #IMPLIED>
 
-    <!-- * The main class the MIME type belongs to. Mainly text/plain or   -->
-    <!-- * application/xml.                                                -->
-    <!ELEMENT sub-class-of EMPTY>
-    <!ATTLIST sub-class-of type CDATA #REQUIRED>
+  <!ELEMENT match (match)*>
+  <!ATTLIST match offset CDATA #REQUIRED>
+  <!ATTLIST match type (string|big16|big32|little16|little32|host16|host32|byte) #REQUIRED>
+  <!ATTLIST match value CDATA #REQUIRED>
+  <!ATTLIST match mask CDATA #IMPLIED>
 
-    <!-- * The alias of the specified MIME type if any exists.             -->
-    <!ELEMENT alias EMPTY>
-    <!ATTLIST alias type CDATA #REQUIRED>
+  <!ELEMENT treemagic (treematch)+>
+  <!ATTLIST treemagic priority CDATA #IMPLIED>
 
-    <!-- * The magic pattern root element. Refer to the shared-mime-info   -->
-    <!-- * database specification. Search                                  -->
-    <!-- * http://sourceforge.net/docman/?group_id=159685 for the link.    -->
-    <!ELEMENT magic (match)+>
-    <!ATTLIST magic priority CDATA #IMPLIED>
+  <!ELEMENT treematch (treematch)*>
+  <!ATTLIST treematch path CDATA #REQUIRED>
+  <!ATTLIST treematch type (file|directory|link) #IMPLIED>
+  <!ATTLIST treematch match-case (true|false) #IMPLIED>
+  <!ATTLIST treematch executable (true|false) #IMPLIED>
+  <!ATTLIST treematch non-empty (true|false) #IMPLIED>
+  <!ATTLIST treematch mimetype CDATA #IMPLIED>
 
-      <!-- * The magic pattern rules. Refer to the shared-mime-info        -->
-      <!-- *  database specification. Search                               -->
-      <!-- * http://sourceforge.net/docman/?group_id=159685 for the link.  -->
-      <!ELEMENT match (match)*>
-      <!ATTLIST match offset CDATA #REQUIRED
-                      type (string|big16|big32|little16|little32|host16|host32|byte) #REQUIRED
-                      value CDATA #REQUIRED
-                      mask CDATA #IMPLIED>
+  <!ELEMENT root-XML EMPTY>
+  <!ATTLIST root-XML namespaceURI CDATA #REQUIRED>
+  <!ATTLIST root-XML localName CDATA #REQUIRED>
 
-    <!-- * Icon for GNOME 2.4 and/or KDE 3.x system. Use the @gnome and/or -->
-    <!-- * @kde attributes to determine the icon especially for KDE and/or -->
-    <!-- * GNOME.                                                          -->
-    <!ELEMENT cm:icon EMPTY>
-    <!ATTLIST cm:icon gnome CDATA #IMPLIED
-                      kde CDATA #IMPLIED>
+  <!ELEMENT alias EMPTY>
+  <!ATTLIST alias type CDATA #REQUIRED>
 
-    <!-- * Wrapper element for a list of applications supporting the       -->
-    <!-- * respective MIME type.                                           -->
-    <!ELEMENT cm:supported-by (cm:application+)>
+  <!ELEMENT sub-class-of EMPTY>
+  <!ATTLIST sub-class-of type CDATA #REQUIRED>
 
-      <!-- * Application supporting the respective MIME type. Use the      -->
-      <!-- * @read and @write attributes to determine, if the application  -->
-      <!-- * reads and/or writes the specified MIME type.                  -->
-      <!ELEMENT cm:application EMPTY>
-      <!ATTLIST cm:application name CDATA #REQUIRED
-                               read (yes|no) "no"
-                               write (yes|no) "no"
-                               package CDATA #IMPLIED>
+  <!-- * Conflicting MIME-type(s). Use the @gnome and/or @kde
+       * attributes to determine if we will have problems with
+       * KDE 3.x, GNOME <= 2.4 or both. -->
+  <!ELEMENT cm:conflicts EMPTY>
+  <!ATTLIST cm:conflicts type CDATA #REQUIRED>
+  <!ATTLIST cm:conflicts cmd (yes|no) "no">
+  <!ATTLIST cm:conflicts fdo (yes|no) "no">
+  <!ATTLIST cm:conflicts gnome (yes|no) "no">
+  <!ATTLIST cm:conflicts kde (yes|no) "no">
+  <!ATTLIST cm:conflicts mimetypes (yes|no) "no">
 
-    <!-- * URL where to find the MIME/file type specification or           -->
-    <!-- * explanation.                                                    -->
-    <!ELEMENT cm:specification EMPTY>
-    <!ATTLIST cm:specification url CDATA #REQUIRED
-                               title CDATA #IMPLIED>
+  <!-- * Icon for GNOME 2.4 and/or KDE 3.x system. Use the @gnome and/or
+       * kde attributes to determine the icon especially for KDE and/or
+       * GNOME. -->
+  <!ELEMENT cm:icon EMPTY>
+  <!ATTLIST cm:icon gnome CDATA #IMPLIED>
+  <!ATTLIST cm:icon kde CDATA #IMPLIED>
+
+  <!-- * Wrapper element for a list of applications supporting the
+       * respective MIME type. -->
+  <!ELEMENT cm:supported-by (cm:application+)>
+
+  <!-- * Application supporting the respective MIME type. Use the
+       * read and @write attributes to determine, if the application
+       * reads and/or writes the specified MIME type. -->
+  <!ELEMENT cm:application EMPTY>
+  <!ATTLIST cm:application name CDATA #REQUIRED>
+  <!ATTLIST cm:application read (yes|no) "no">
+  <!ATTLIST cm:application write (yes|no) "no">
+  <!ATTLIST cm:application package CDATA #IMPLIED>
+
+  <!-- * URL where to find the MIME/file type specification or
+       * explanation. -->
+  <!ELEMENT cm:specification EMPTY>
+  <!ATTLIST cm:specification url CDATA #REQUIRED>
+  <!ATTLIST cm:specification title CDATA #IMPLIED>
 
 ]>
 
 <mime-info cm:vcsid="'$Id$'">
-
-	<mime-type type="application/x-chemtool" cm:support="no">
-		<_comment>Chemtool file</_comment>
-		<glob pattern="*.cht"/>
-		<sub-class-of type="text/plain"/>
-		<magic priority="50">
-			<match type="string" value="Chemtool Version " offset="0"/>
-		</magic>
-		<cm:icon kde="chemtool"/>
-		<cm:supported-by>
-			<cm:application name="chemtool"/>
-		</cm:supported-by>
-	</mime-type>
 
 	<mime-type type="application/x-ghemical" cm:support="no">
 		<_comment>Ghemical QM file</_comment>
